--- a/packages/firechat/tsconfig.json
+++ b/packages/firechat/tsconfig.json
@@ -21,6 +21,9 @@
     ],
     "baseUrl": ".",
     "outDir": "./dist",
+    "paths": {
+      "tslib" : ["node_modules/tslib/tslib.d.ts"]
+    },
   },
   "include": ["."],
   "exclude": ["dist", "node_modules", "**/*.spec.ts"]
